# backend/docs/swagger.json
@@ -430,24 +430,11 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "insp"
                 ],
                 "summary": "Create inspection",
                 "operationId": "Create inspection",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "user_id",
-                        "description": "user id",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -736,9 +723,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "insp"
                 ],
@@ -747,7 +731,24 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/models.RegionAndYear"
+                        }
+                    }
+                }
+            }
+        },
+        "/insp/statistic/station/{station_code}": {
+            "get": {
+                "description": "Count inspections by quarter and year in station",
+                "tags": [
+                    "insp"
+                ],
+                "summary": "Count inspections by quarter and year in station",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.StationQuarterAndYear"
                         }
                     }
                 }
@@ -1238,6 +1239,20 @@
                 }
             }
         },
+        "models.CarsCountRegion": {
+            "type": "object",
+            "properties": {
+                "mb": {
+                    "type": "integer"
+                },
+                "mn": {
+                    "type": "integer"
+                },
+                "mt": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Inspection": {
             "type": "object",
             "properties": {
@@ -1306,6 +1321,17 @@
                 }
             }
         },
+        "models.RegionAndYear": {
+            "type": "object",
+            "properties": {
+                "cars_count_region": {
+                    "$ref": "#/definitions/models.CarsCountRegion"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Station": {
             "type": "object",
             "required": [
@@ -1346,6 +1372,20 @@
                 },
                 "station_url": {
                     "type": "string"
+                }
+            }
+        },
+        "models.StationQuarterAndYear": {
+            "type": "object",
+            "properties": {
+                "cars_count": {
+                    "$ref": "#/definitions/models.CarsCount"
+                },
+                "station_code": {
+                    "type": "string"
+                },
+                "year": {
+                    "type": "integer"
                 }
             }
         },
